--- a/style/_scss/_header.scss
+++ b/style/_scss/_header.scss
@@ -1,59 +1,5 @@
 // HEADER
 header {
   display: flex;
-  flex-direction: row;
-  flex-wrap: nowrap;
-  justify-content: space-between;
-  width: 100%;
-  padding: 1rem;
-
-  fieldset {
-
-    label {
-      display: none;
-    }
-  }
-}
-
-
-// PROFILE
-header {
-  form {
-    display: flex;
-    flex-direction: column;
-    width: calc(100% - 4rem);
-
-    fieldset:first-of-type {
-      margin: 0 0 1rem;
-    }
-  }
-
-  .profile {
-    display: grid;
-    overflow: hidden;
-    width: 3rem;
-    min-width: 3rem;
-    height: 3rem;
-    border: 1px solid $color-input;
-    border-radius: 100%;
-  }
-}
-
-@media (min-width: 40rem) {
-  header {
-    form {
-      flex-direction: row;
-      align-items: center;
-      justify-content: flex-start;
-
-      fieldset {
-        width: 30%;
-        padding: 0;
-
-        &:first-of-type {
-          margin: 0 2rem 0 0;
-        }
-      }
-    }
-  }
+  padding: $spacing-16;
 }
