--- a/style/_scss/_variables.scss
+++ b/style/_scss/_variables.scss
@@ -6,6 +6,13 @@
   --p: 1rem;
   --small: 0.75rem;
   --xsmall: 0.625rem;
+  --spacing--4: 0.25rem;
+  --spacing--8: 0.5rem;
+  --spacing--12: 0.75rem;
+  --spacing--16: 1rem;
+  --spacing--20: 1.25rem;
+  --spacing--24: 1.5rem;
+  --spacing--32: 2rem;
   --color--primary: #af241e;
   --color--secondary: #2d6199;
   --color--background-light: #f8f8f8;
@@ -22,6 +29,16 @@ $h3: var(--h3);
 $p: var(--p);
 $small: var(--small);
 $xsmall: var(--xsmall);
+
+
+// SPACING VARIABLES
+$spacing-4: var(--spacing--4);
+$spacing-8: var(--spacing--8);
+$spacing-12: var(--spacing--12);
+$spacing-16: var(--spacing--16);
+$spacing-20: var(--spacing--20);
+$spacing-24: var(--spacing--24);
+$spacing-32: var(--spacing--32);
 
 
 // COLOR VARIABLES
