--- a/style/_scss/_navigation.scss
+++ b/style/_scss/_navigation.scss
@@ -1,1 +1,66 @@
 // NAVIGATION
+nav {
+  z-index: 100;
+  background-color: white;
+
+  ul {
+    display: flex;
+    align-items: center;
+    flex-direction: row;
+    flex-wrap: nowrap;
+    justify-content: space-between;
+    position: relative;
+    overflow: hidden;
+    height: 100%;
+    font-size: $xsmall;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+    list-style: none;
+
+    li {
+      padding: 0 $spacing-8;
+
+      a {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        width: 100%;
+        text-align: center;
+        color: $color-nav;
+
+        span.icon {
+          display: grid;
+          width: 1.5rem;
+          height: 1.5rem;
+          margin-bottom: $spacing-4;
+          border-radius: 100%;
+          background: $color-nav;
+          @include transition(background);
+        }
+
+        &:hover,
+        &:focus {
+          color: $color-nav-hover;
+
+          span.icon {
+            background: $color-nav-hover;
+          }
+        }
+      }
+    }
+  }
+}
+
+@media (min-width: 40rem) {
+  nav {
+    ul {
+      flex-direction: column;
+      justify-content: flex-start;
+      white-space: wrap;
+
+      li {
+        padding: $spacing-8;
+      }
+    }
+  }
+}
