--- a/style/_scss/_variables.scss
+++ b/style/_scss/_variables.scss
@@ -3,6 +3,7 @@
   --h1: 2rem;
   --h2: 1.5rem;
   --h3: 1.25rem;
+  --h4: 1rem;
   --p: 1rem;
   --small: 0.75rem;
   --xsmall: 0.625rem;
@@ -26,6 +27,7 @@
 $h1: var(--h1);
 $h2: var(--h2);
 $h3: var(--h3);
+$h4: var(--h4);
 $p: var(--p);
 $small: var(--small);
 $xsmall: var(--xsmall);
