--- a/style/_scss/_inputs.scss
+++ b/style/_scss/_inputs.scss
@@ -16,3 +16,67 @@ select {
   color: black;
   @include appearance(none);
 }
+
+
+// FIELDSETS
+fieldset {
+  display: flex;
+  flex-direction: column-reverse;
+  position: relative;
+  width: 100%;
+  margin: 0;
+  padding: $spacing-4 0;
+  border: none;
+}
+
+
+// LABEL
+label {
+  display: none;
+  padding: 0 0 0.5rem;
+  font-size: $small;
+  font-weight: 700;
+}
+
+
+// INPUT, SELECT
+input,
+select {
+  position: relative;
+  overflow: hidden;
+  width: 100%;
+  min-height: 3rem;
+  margin: 0;
+  padding: 0.5rem;
+  border: 1px solid $color-input;
+  border-radius: 0.25rem;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+  background-color: transparent;
+}
+
+
+// SELECT
+.select-icon {
+  display: grid;
+  position: absolute;
+  top: calc(50% - 1rem);
+  right: 0.5rem;
+  // z-index: -1;
+  width: 2rem;
+  height: 2rem;
+  padding: 0.5rem;
+  color: $color-input;
+
+  svg {
+    width: 100%;
+    height: 100%;
+  }
+}
+
+select option {
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+  @include appearance(none);
+}
