--- a/style/_scss/_layout.scss
+++ b/style/_scss/_layout.scss
@@ -7,14 +7,22 @@ body {
   nav {
     position: fixed;
     bottom: 0;
+    width: 100vw;
+    height: 4rem;
+    max-height: 4rem;
+    padding: $spacing-8;
   }
 
   main {
-    overflow: hidden;
+    display: flex;
+    flex-direction: column;
+    overflow-x: hidden;
+    overflow-y: scroll;
     width: 100vw;
     max-width: 100vw;
     min-width: 100vw;
-    padding: $spacing-16;
+    min-height: calc(100vh - 4rem);
+    padding: $spacing-8;
 
     .content {
       display: flex;
@@ -23,7 +31,8 @@ body {
       width: 100%;
       max-width: 100%;
       min-width: 100%;
-      padding: $spacing-16;
+      height: calc(100vh - 8rem);
+      padding: $spacing-8;
     }
   }
 }
@@ -37,17 +46,26 @@ body {
       position: relative;
       top: 0;
       left: 0;
+      width: 4.5rem;
+      height: auto;
+      max-height: none;
+      padding-top: $spacing-24;
     }
 
     main {
       width: calc(100vw - 4.5rem);
       max-width: calc(100vw - 4.5rem);
       min-width: calc(100vw - 4.5rem);
+      min-height: 100vh;
 
       .content {
         flex-direction: row;
-        flex-wrap: nowrap;
+        align-content: flex-start;
+        flex-wrap: wrap;
+        height: calc(100vh - 5rem);
       }
     }
   }
 }
+
+@import "content";
