--- a/style/master.css
+++ b/style/master.css
@@ -2,6 +2,7 @@
   --h1: 2rem;
   --h2: 1.5rem;
   --h3: 1.25rem;
+  --h4: 1rem;
   --p: 1rem;
   --small: 0.75rem;
   --xsmall: 0.625rem;
@@ -69,6 +70,7 @@ a:hover, a:focus {
 h1,
 h2,
 h3,
+h4,
 p,
 small {
   display: block;
@@ -79,7 +81,8 @@ small {
 
 h1,
 h2,
-h3 {
+h3,
+h4 {
   font-weight: 700;
   line-height: 1.25;
 }
@@ -94,6 +97,10 @@ h2 {
 
 h3 {
   font-size: var(--h3);
+}
+
+h4 {
+  font-size: var(--h4);
 }
 
 p {
@@ -159,6 +166,7 @@ ul.no-bullets {
 h1.center,
 h2.center,
 h3.center,
+h4.center,
 p.center,
 small.center {
   text-align: center;
@@ -167,6 +175,7 @@ small.center {
 h1.right,
 h2.right,
 h3.right,
+h4.right,
 p.right,
 small.right {
   text-align: right;
@@ -175,6 +184,7 @@ small.right {
 h1:first-child,
 h2:first-child,
 h3:first-child,
+h4:first-child,
 p:first-child,
 small:first-child,
 .xsmall:first-child,
@@ -186,7 +196,8 @@ dl:first-child {
 
 h1 + p,
 h2 + p,
-h3 + p {
+h3 + p,
+h4 + p {
   padding-top: 0;
 }
 
@@ -198,13 +209,21 @@ body {
 body nav {
   position: fixed;
   bottom: 0;
+  width: 100vw;
+  height: 4rem;
+  max-height: 4rem;
+  padding: var(--spacing--8);
 }
 body main {
-  overflow: hidden;
+  display: flex;
+  flex-direction: column;
+  overflow-x: hidden;
+  overflow-y: scroll;
   width: 100vw;
   max-width: 100vw;
   min-width: 100vw;
-  padding: var(--spacing--16);
+  min-height: calc(100vh - 4rem);
+  padding: var(--spacing--8);
 }
 body main .content {
   display: flex;
@@ -213,7 +232,8 @@ body main .content {
   width: 100%;
   max-width: 100%;
   min-width: 100%;
-  padding: var(--spacing--16);
+  height: calc(100vh - 8rem);
+  padding: var(--spacing--8);
 }
 
 @media (min-width: 40rem) {
@@ -225,17 +245,213 @@ body main .content {
     position: relative;
     top: 0;
     left: 0;
+    width: 4.5rem;
+    height: auto;
+    max-height: none;
+    padding-top: var(--spacing--24);
   }
   body main {
     width: calc(100vw - 4.5rem);
     max-width: calc(100vw - 4.5rem);
     min-width: calc(100vw - 4.5rem);
+    min-height: 100vh;
   }
   body main .content {
     flex-direction: row;
-    flex-wrap: nowrap;
+    align-content: flex-start;
+    flex-wrap: wrap;
+    height: calc(100vh - 5rem);
   }
 }
+.content--list,
+.content--details {
+  display: flex;
+  flex-direction: column;
+  position: absolute;
+  top: 0.5rem;
+  width: calc(100% - 1rem);
+  background-color: white;
+}
+
+.content--details {
+  transition: all 0.25s ease 0s;
+  transform: translateX(100vw);
+}
+
+@media (min-width: 40rem) {
+  .content--list {
+    position: relative;
+    top: auto;
+    width: 30%;
+    padding-right: var(--spacing--8);
+  }
+  .content--details {
+    position: fixed;
+    top: auto;
+    left: calc(30% + 4rem);
+    width: calc(70% - 5rem);
+    padding-left: var(--spacing--8);
+    transform: translateX(0);
+  }
+}
+.content--list-controls details ul li {
+  border: none;
+}
+.content--list-controls details ul li:last-of-type {
+  border: none;
+}
+
+.content--list ul.list {
+  padding: var(--spacing--16) 0 0 0;
+  list-style: none;
+}
+.content--list ul.list li {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: nowrap;
+  border-top: 1px solid var(--color--input);
+}
+.content--list ul.list li .avatar {
+  display: grid;
+  overflow: hidden;
+  width: 3rem;
+  height: 3rem;
+  border: 1px solid var(--color--input);
+  border-radius: 100%;
+}
+.content--list ul.list li .details {
+  width: calc(100% - 4.5rem);
+  padding: 0 var(--spacing--8);
+}
+.content--list ul.list li .details p {
+  overflow: hidden;
+  padding: 0;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+}
+.content--list ul.list li .details p:first-of-type {
+  font-weight: 700;
+}
+.content--list ul.list li .details ul.status {
+  display: none;
+}
+.content--list ul.list li .actions {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 1.5rem;
+}
+.content--list ul.list li .actions svg {
+  width: 100%;
+  height: 100%;
+}
+.content--list ul.list li:last-of-type {
+  border-bottom: 1px solid var(--color--input);
+}
+
+.content--details {
+  height: calc(100vh - 9rem);
+}
+.content--details .content--details-footer {
+  position: absolute;
+  bottom: 0;
+}
+
+@media (min-width: 40rem) {
+  .content--details {
+    height: calc(100vh - 6rem);
+  }
+}
+nav {
+  z-index: 100;
+  background-color: white;
+}
+nav ul {
+  display: flex;
+  align-items: center;
+  flex-direction: row;
+  flex-wrap: nowrap;
+  justify-content: space-between;
+  position: relative;
+  overflow: hidden;
+  height: 100%;
+  font-size: var(--xsmall);
+  text-overflow: ellipsis;
+  white-space: nowrap;
+  list-style: none;
+}
+nav ul li {
+  padding: 0 var(--spacing--8);
+}
+nav ul li a {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  width: 100%;
+  text-align: center;
+  color: var(--color--nav);
+}
+nav ul li a span.icon {
+  display: grid;
+  width: 1.5rem;
+  height: 1.5rem;
+  margin-bottom: var(--spacing--4);
+  border-radius: 100%;
+  background: var(--color--nav);
+  transition: background 0.25s ease 0s;
+}
+nav ul li a:hover, nav ul li a:focus {
+  color: var(--color--nav-hover);
+}
+nav ul li a:hover span.icon, nav ul li a:focus span.icon {
+  background: var(--color--nav-hover);
+}
+
+@media (min-width: 40rem) {
+  nav ul {
+    flex-direction: column;
+    justify-content: flex-start;
+    white-space: wrap;
+  }
+  nav ul li {
+    padding: var(--spacing--8);
+  }
+}
+details {
+  position: relative;
+  overflow: hidden;
+  width: 100%;
+  max-height: 3rem;
+  min-height: 3rem;
+  margin: var(--spacing--4) 0;
+  padding: 0.5rem;
+  border: 1px solid var(--color--input);
+  border-radius: 0.25rem;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+  background-color: transparent;
+  font-size: var(--p);
+  color: black;
+  -webkit-appearance: none;
+  -moz-appearance: none;
+  appearance: none;
+  transition: max-height 0.25s ease 0s;
+}
+details summary {
+  padding: var(--spacing--8) 0;
+}
+details ul {
+  padding: 0;
+  list-style: none;
+}
+details ul li {
+  padding: var(--spacing--4) 0;
+}
+
+details[open] {
+  max-height: 100vh;
+}
+
 input[type=password],
 input[type=checkbox],
 input[type=number],
@@ -256,7 +472,65 @@ select {
   appearance: none;
 }
 
+fieldset {
+  display: flex;
+  flex-direction: column-reverse;
+  position: relative;
+  width: 100%;
+  margin: 0;
+  padding: var(--spacing--4) 0;
+  border: none;
+}
+
+label {
+  display: none;
+  padding: 0 0 0.5rem;
+  font-size: var(--small);
+  font-weight: 700;
+}
+
+input,
+select {
+  position: relative;
+  overflow: hidden;
+  width: 100%;
+  min-height: 3rem;
+  margin: 0;
+  padding: 0.5rem;
+  border: 1px solid var(--color--input);
+  border-radius: 0.25rem;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+  background-color: transparent;
+}
+
+.select-icon {
+  display: grid;
+  position: absolute;
+  top: calc(50% - 1rem);
+  right: 0.5rem;
+  width: 2rem;
+  height: 2rem;
+  padding: 0.5rem;
+  color: var(--color--input);
+}
+.select-icon svg {
+  width: 100%;
+  height: 100%;
+}
+
+select option {
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+  -webkit-appearance: none;
+  -moz-appearance: none;
+  appearance: none;
+}
+
 header {
   display: flex;
-  padding: var(--spacing--16);
+  align-items: center;
+  height: 4rem;
+  padding: var(--spacing--8);
 }
