--- a/style/master.scss
+++ b/style/master.scss
@@ -2,6 +2,7 @@
 @import "_scss/typography";
 @import "_scss/layout";
 @import "_scss/navigation";
+@import "_scss/details";
 @import "_scss/inputs";
 @import "_scss/forms";
 @import "_scss/header";
