Message status and nav updates
Added message status to content list items and updated nav for wide views (bigger icons).

--- a/style/_scss/_navigation.scss
+++ b/style/_scss/_navigation.scss
@@ -60,6 +60,14 @@ nav {
 
       li {
         padding: $spacing-8;
+
+        a {
+
+          span.icon {
+            width: 2.5rem;
+            height: 2.5rem;
+          }
+        }
       }
     }
   }
