--- a/style/master.css
+++ b/style/master.css
@@ -248,7 +248,6 @@ body main .content {
     width: 4.5rem;
     height: auto;
     max-height: none;
-    padding-top: var(--spacing--24);
   }
   body main {
     width: calc(100vw - 4.5rem);
@@ -333,17 +332,34 @@ body main .content {
   font-weight: 700;
 }
 .content--list ul.list li .details ul.status {
-  display: none;
+  display: flex;
+  justify-content: space-between;
+  padding: 0;
+  font-size: var(--small);
+}
+.content--list ul.list li .details ul.status li {
+  padding: 0;
+  border: none;
+}
+.content--list ul.list li .details ul.status li:last-of-type {
+  border: none;
 }
 .content--list ul.list li .actions {
   display: flex;
   align-items: center;
   justify-content: center;
   width: 1.5rem;
+  padding: 0 0 0 var(--spacing--4);
 }
 .content--list ul.list li .actions svg {
   width: 100%;
   height: 100%;
+  color: var(--color--nav);
+  cursor: pointer;
+  transition: color 0.25s ease 0s;
+}
+.content--list ul.list li .actions svg:hover, .content--list ul.list li .actions svg:focus {
+  color: var(--color--nav-hover);
 }
 .content--list ul.list li:last-of-type {
   border-bottom: 1px solid var(--color--input);
@@ -415,6 +431,10 @@ nav ul li a:hover span.icon, nav ul li a:focus span.icon {
   }
   nav ul li {
     padding: var(--spacing--8);
+  }
+  nav ul li a span.icon {
+    width: 2.5rem;
+    height: 2.5rem;
   }
 }
 details {
