--- a/style/_scss/_content.scss
+++ b/style/_scss/_content.scss
@@ -84,7 +84,19 @@
       }
 
       ul.status {
-        display: none;
+        display: flex;
+        justify-content: space-between;
+        padding: 0;
+        font-size: $small;
+
+        li {
+          padding: 0;
+          border: none;
+
+          &:last-of-type {
+            border: none;
+          }
+        }
       }
     }
 
@@ -93,10 +105,19 @@
       align-items: center;
       justify-content: center;
       width: 1.5rem;
+      padding: 0 0 0 $spacing-4;
 
       svg {
         width: 100%;
         height: 100%;
+        color: $color-nav;
+        cursor: pointer;
+        @include transition(color);
+
+        &:hover,
+        &:focus {
+          color: $color-nav-hover;
+        }
       }
     }
 
