--- a/style/_scss/_navigation.scss
+++ b/style/_scss/_navigation.scss
@@ -72,3 +72,39 @@ nav {
     }
   }
 }
+
+
+// NAVIGATION LOCATION SELECT
+nav {
+  ul {
+    li {
+      font-weight: 700;
+      color: $color-nav;
+
+      fieldset {
+        padding: 0;
+
+        select {
+          min-height: 1.5rem;
+          margin-bottom: $spacing-4;
+          padding: $spacing-4;
+          font-size: $small;
+        }
+      }
+    }
+  }
+}
+
+@media (min-width: 40rem) {
+  nav {
+    ul {
+      li {
+        fieldset {
+          select {
+            min-height: 2.5rem;
+          }
+        }
+      }
+    }
+  }
+}
