--- a/style/master.css
+++ b/style/master.css
@@ -437,6 +437,25 @@ nav ul li a:hover span.icon, nav ul li a:focus span.icon {
     height: 2.5rem;
   }
 }
+nav ul li {
+  font-weight: 700;
+  color: var(--color--nav);
+}
+nav ul li fieldset {
+  padding: 0;
+}
+nav ul li fieldset select {
+  min-height: 1.5rem;
+  margin-bottom: var(--spacing--4);
+  padding: var(--spacing--4);
+  font-size: var(--small);
+}
+
+@media (min-width: 40rem) {
+  nav ul li fieldset select {
+    min-height: 2.5rem;
+  }
+}
 details {
   position: relative;
   overflow: hidden;
@@ -504,7 +523,7 @@ fieldset {
 
 label {
   display: none;
-  padding: 0 0 0.5rem;
+  padding: 0 0 var(--spacing--8);
   font-size: var(--small);
   font-weight: 700;
 }
@@ -516,7 +535,7 @@ select {
   width: 100%;
   min-height: 3rem;
   margin: 0;
-  padding: 0.5rem;
+  padding: var(--spacing--8);
   border: 1px solid var(--color--input);
   border-radius: 0.25rem;
   text-overflow: ellipsis;
@@ -531,7 +550,7 @@ select {
   right: 0.5rem;
   width: 2rem;
   height: 2rem;
-  padding: 0.5rem;
+  padding: var(--spacing--8);
   color: var(--color--input);
 }
 .select-icon svg {
