--- a/style/master.css
+++ b/style/master.css
@@ -217,6 +217,9 @@ body {
   display: flex;
   flex-direction: column-reverse;
   flex-wrap: nowrap;
+  justify-content: flex-end;
+  width: 100vw;
+  height: 100vh;
 }
 body nav {
   position: fixed;
@@ -224,186 +227,34 @@ body nav {
   width: 100vw;
   height: 4rem;
   max-height: 4rem;
-  padding: var(--spacing--8);
 }
 body main {
-  display: flex;
-  flex-direction: column;
-  overflow-x: hidden;
-  overflow-y: scroll;
-  width: 100vw;
-  max-width: 100vw;
-  min-width: 100vw;
-  min-height: calc(100vh - 4rem);
+  height: calc(100vh - 4rem);
   padding: var(--spacing--8);
 }
 body main .content {
-  display: flex;
-  flex-direction: column;
-  position: relative;
-  width: 100%;
-  max-width: 100%;
-  min-width: 100%;
-  height: calc(100vh - 8rem);
+  height: calc(100vh - 9rem);
   padding: var(--spacing--8);
 }
 
 @media (min-width: 40rem) {
   body {
     flex-direction: row;
-    justify-content: space-between;
   }
   body nav {
     position: relative;
     top: 0;
     left: 0;
-    width: 4.5rem;
+    width: 4rem;
     height: auto;
     max-height: none;
   }
   body main {
-    width: calc(100vw - 4.5rem);
-    max-width: calc(100vw - 4.5rem);
-    min-width: calc(100vw - 4.5rem);
-    min-height: 100vh;
+    height: 100vh;
+    width: calc(100% - 4rem);
   }
   body main .content {
-    flex-direction: row;
-    align-content: flex-start;
-    flex-wrap: wrap;
     height: calc(100vh - 5rem);
-  }
-}
-.content--list,
-.content--details {
-  display: flex;
-  flex-direction: column;
-  position: absolute;
-  top: 0.5rem;
-  width: calc(100% - 1rem);
-  background-color: white;
-}
-
-.content--details {
-  -webkit-transition: all 0.25s ease 0s;
-  -moz-transition: all 0.25s ease 0s;
-  -ms-transition: all 0.25s ease 0s;
-  -o-transition: all 0.25s ease 0s;
-  transition: all 0.25s ease 0s;
-  -webkit-transform: translateX(100vw);
-  -moz-transform: translateX(100vw);
-  -ms-transform: translateX(100vw);
-  -o-transform: translateX(100vw);
-  transform: translateX(100vw);
-}
-
-@media (min-width: 40rem) {
-  .content--list {
-    position: relative;
-    top: auto;
-    width: 30%;
-    padding-right: var(--spacing--8);
-  }
-  .content--details {
-    position: fixed;
-    top: auto;
-    left: calc(30% + 4rem);
-    width: calc(70% - 5rem);
-    padding-left: var(--spacing--8);
-    -webkit-transform: translateX(0);
-    -moz-transform: translateX(0);
-    -ms-transform: translateX(0);
-    -o-transform: translateX(0);
-    transform: translateX(0);
-  }
-}
-.content--list-controls details ul li {
-  border: none;
-}
-.content--list-controls details ul li:last-of-type {
-  border: none;
-}
-
-.content--list ul.list {
-  padding: var(--spacing--16) 0 0 0;
-  list-style: none;
-}
-.content--list ul.list li {
-  display: flex;
-  flex-direction: row;
-  flex-wrap: nowrap;
-  border-top: 1px solid var(--color--input);
-}
-.content--list ul.list li .avatar {
-  display: grid;
-  overflow: hidden;
-  width: 3rem;
-  height: 3rem;
-  border: 1px solid var(--color--input);
-  border-radius: 100%;
-}
-.content--list ul.list li .details {
-  width: calc(100% - 4.5rem);
-  padding: 0 var(--spacing--8);
-}
-.content--list ul.list li .details p {
-  overflow: hidden;
-  padding: 0;
-  text-overflow: ellipsis;
-  white-space: nowrap;
-}
-.content--list ul.list li .details p:first-of-type {
-  font-weight: 700;
-}
-.content--list ul.list li .details ul.status {
-  display: flex;
-  justify-content: space-between;
-  padding: 0;
-  font-size: var(--small);
-}
-.content--list ul.list li .details ul.status li {
-  padding: 0;
-  border: none;
-}
-.content--list ul.list li .details ul.status li:last-of-type {
-  border: none;
-}
-.content--list ul.list li .actions {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  width: 1.5rem;
-  padding: 0 0 0 var(--spacing--4);
-}
-.content--list ul.list li .actions svg {
-  width: 100%;
-  height: 100%;
-  color: var(--color--nav);
-  cursor: pointer;
-  -webkit-transition: color 0.25s ease 0s;
-  -moz-transition: color 0.25s ease 0s;
-  -ms-transition: color 0.25s ease 0s;
-  -o-transition: color 0.25s ease 0s;
-  transition: color 0.25s ease 0s;
-}
-.content--list ul.list li .actions svg:hover, .content--list ul.list li .actions svg:focus {
-  color: var(--color--nav-hover);
-}
-.content--list ul.list li:last-of-type {
-  border-bottom: 1px solid var(--color--input);
-}
-
-.content--details {
-  height: calc(100vh - 9rem);
-}
-.content--details .content--details-footer {
-  position: absolute;
-  bottom: 0;
-}
-
-@media (min-width: 40rem) {
-  .content--details {
-    height: calc(100vh - 6rem);
   }
 }
 nav {
