--- a/style/master.scss
+++ b/style/master.scss
@@ -1,6 +1,6 @@
 @import "_scss/base";
 @import "_scss/typography";
-@import "_scss/application-layout";
+@import "_scss/layout";
 @import "_scss/navigation";
 @import "_scss/details";
 @import "_scss/inputs";
