--- a/style/_scss/_base.scss
+++ b/style/_scss/_base.scss
@@ -26,10 +26,20 @@ html {
 
 // BODY
 body {
-  width: 100%;
-  min-width: 100%;
-  margin: 0 auto;
+  display: flex;
+  flex-direction: column-reverse;
+  flex-wrap: nowrap;
+  justify-content: flex-end;
+  width: 100vw;
+  height: 100vh;
+  margin: 0;
   padding: 0;
+}
+
+@media (min-width: 40rem) {
+  body {
+    flex-direction: row;
+  }
 }
 
 
