--- a/style/_scss/_content.scss
+++ b/style/_scss/_content.scss
@@ -1,145 +1,210 @@
-// CONTENT LAYOUTS
-.content--list,
-.content--details {
+// CONTENT
+.content {
   display: flex;
-  flex-direction: column;
-  position: absolute;
-  top: 0.5rem;
-  width: calc(100% - 1rem);
-  background-color: white;
-}
-
-.content--details {
-  @include transition(all);
-  @include transform(translateX(100vw));
+  flex-direction: row;
+  position: relative;
+  overflow: hidden;
+  width: 100%;
+  max-width: 100%;
+  min-width: 100%;
 }
 
 @media (min-width: 40rem) {
-  .content--list {
-    position: relative;
-    top: auto;
-    width: 30%;
-    padding-right: $spacing-8;
-  }
-
-  .content--details {
-    position: fixed;
-    top: auto;
-    left: calc(30% + 4rem);
-    width: calc(70% - 5rem);
-    padding-left: $spacing-8;
-    @include transform(translateX(0));
-  }
-}
-
-
-// CONTENT LIST CONTROLS
-.content--list-controls {
-  details {
-    ul li {
-      // padding: $spacing-8 0;
-      border: none;
-
-      &:last-of-type {
-        border: none;
-      }
-    }
-  }
-}
-
-
-// CONTENT LIST LIST
-.content--list ul.list {
-  padding: $spacing-16 0 0 0;
-  list-style: none;
-
-  li {
-    display: flex;
+  .content {
     flex-direction: row;
-    flex-wrap: nowrap;
-    border-top: 1px solid $color-input;
+  }
+}
 
-    .avatar {
-      display: grid;
-      overflow: hidden;
-      width: 3rem;
-      height: 3rem;
-      border: 1px solid $color-input;
-      border-radius: 100%;
-    }
 
-    .details {
-      width: calc(100% - 4.5rem);
-      padding: 0 $spacing-8;
+// CONTENT LIST
+.content--list {
+  width: 100%;
+  min-width: 100%;
 
-      p {
+  ul.list {
+    padding: $spacing-4 0 0;
+    list-style-type: none;
+
+    li {
+      display: flex;
+      flex-direction: row;
+      flex-wrap: nowrap;
+      padding: $spacing-12 0;
+      border-bottom: 1px solid $color-input;
+
+      .avatar {
+        display: grid;
         overflow: hidden;
-        padding: 0;
-        text-overflow: ellipsis;
-        white-space: nowrap;
+        width: 3rem;
+        height: 3rem;
+        border: 1px solid $color-input;
+        border-radius: 100%;
+      }
 
-        &:first-of-type {
-          font-weight: 700;
+      .details {
+        width: calc(100% - 4.5rem);
+        padding: 0 $spacing-8;
+
+        p {
+          overflow: hidden;
+          padding: 0;
+          line-height: 1.25;
+          text-overflow: ellipsis;
+          white-space: nowrap;
+
+          &:first-of-type {
+            font-weight: 700;
+          }
+        }
+
+        ul.status {
+          display: flex;
+          justify-content: space-between;
+          padding: $spacing-4 0 0;
+          font-size: $small;
+
+          li {
+            padding: 0;
+            border: none;
+
+            &:last-of-type {
+              border: none;
+            }
+          }
         }
       }
 
-      ul.status {
+      .actions {
         display: flex;
-        justify-content: space-between;
-        padding: 0;
-        font-size: $small;
+        align-items: center;
+        justify-content: center;
+        width: 1.5rem;
+        padding: 0 0 0 $spacing-4;
 
-        li {
-          padding: 0;
-          border: none;
+        svg {
+          width: 100%;
+          height: 100%;
+          color: $color-nav;
+          cursor: pointer;
+          @include transition(color);
 
-          &:last-of-type {
-            border: none;
+          &:hover,
+          &:focus {
+            color: $color-nav-hover;
           }
         }
       }
     }
+  }
+}
 
-    .actions {
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      width: 1.5rem;
-      padding: 0 0 0 $spacing-4;
-
-      svg {
-        width: 100%;
-        height: 100%;
-        color: $color-nav;
-        cursor: pointer;
-        @include transition(color);
-
-        &:hover,
-        &:focus {
-          color: $color-nav-hover;
-        }
-      }
-    }
-
-    &:last-of-type {
-      border-bottom: 1px solid $color-input;
-    }
+@media (min-width: 40rem) {
+  .content--list {
+    width: 30%;
+    min-width: 30%;
+    padding-right: $spacing-8;
   }
 }
 
 
 // CONTENT DETAILS
 .content--details {
-  height: calc(100vh - 9rem);
-
-  .content--details-footer {
-    position: absolute;
-    bottom: 0;
-  }
+  width: 100%;
+  min-width: 100%;
+  background-color: white;
+  @include transition(all);
+  @include transform(translateX(-92vw));
+  @include transform(translateX(100vw));
 }
 
 @media (min-width: 40rem) {
   .content--details {
-    height: calc(100vh - 6rem);
+    width: 70%;
+    min-width: 70%;
+    padding-left: $spacing-8;
+    @include transform(translateX(0));
   }
+}
+
+
+// CONTENT DETAILS HEADER
+.content--details-header {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  flex-wrap: nowrap;
+  justify-content: space-between;
+  position: fixed;
+  top: 0;
+  z-index: 10;
+  width: 100%;
+  padding: 0 0 $spacing-8;
+  background-color: white;
+
+  h4 {
+    width: auto;
+    padding: 0;
+  }
+
+  .controls {
+    display: flex;
+    flex-direction: row-reverse;
+    align-items: center;
+
+    .avatar {
+      display: grid;
+      overflow: hidden;
+      width: 3rem;
+      height: 3rem;
+      border: 1px solid;
+      border-color: $color-nav;
+      border-radius: 100%;
+      cursor: pointer;
+      @include transition(border-color);
+
+      &:hover,
+      &:focus {
+        border-color: $color-nav-hover;
+      }
+    }
+
+    .call,
+    .settings {
+      display: grid;
+      overflow: hidden;
+      width: 2rem;
+      height: 2rem;
+      margin: 0 $spacing-4;
+      border-radius: 100%;
+      background-color: $color-nav;
+      cursor: pointer;
+      @include transition(background-color);
+
+      &:hover,
+      &:focus {
+        background-color: $color-nav-hover;
+      }
+    }
+  }
+}
+
+@media (min-width: 40rem) {
+  .content--details-header {
+    width: calc(100% - $spacing-8);
+  }
+}
+
+
+// CONTENT DETAILS MAIN
+.content--details-main {
+  padding-top: 3.5rem;
+}
+
+
+// CONTENT DETAILS FOOTER
+.content--details-footer {
+  position: fixed;
+  bottom: 0;
+  z-index: 10;
+  background-color: white;
 }
