--- a/style/_scss/_navigation.scss
+++ b/style/_scss/_navigation.scss
@@ -100,6 +100,8 @@ nav {
     ul {
       li {
         fieldset {
+          padding-top: $spacing-8;
+
           select {
             min-height: 2.5rem;
           }
