Nav and Layout updates
Consolidated other application areas to "Tools" in the nav; made views visible in the bottom nav on mobile, but at the top of the inbox area on screens wider than 40rem (640px).

--- a/style/_scss/_content.scss
+++ b/style/_scss/_content.scss
@@ -21,6 +21,12 @@
   width: 100%;
   min-width: 100%;
 
+  form {
+    fieldset:first-of-type {
+      display: none;
+    }
+  }
+
   ul.list {
     padding: $spacing-4 0 0;
     list-style-type: none;
@@ -109,6 +115,12 @@
     width: 30%;
     min-width: 30%;
     padding-right: $spacing-8;
+
+    form {
+      fieldset:first-of-type {
+        display: inherit;
+      }
+    }
   }
 }
 
