--- a/style/_scss/_navigation.scss
+++ b/style/_scss/_navigation.scss
@@ -1,6 +1,7 @@
 // NAVIGATION
 nav {
   z-index: 100;
+  padding: 0 $spacing-4;
   background-color: white;
 
   ul {
@@ -48,6 +49,13 @@ nav {
         }
       }
     }
+
+    li.views {
+      ul {
+        border-right: 1px solid $color-input;
+        border-left: 1px solid $color-input;
+      }
+    }
   }
 }
 
@@ -55,7 +63,7 @@ nav {
   nav {
     ul {
       flex-direction: column;
-      justify-content: flex-start;
+      justify-content: flex-end;
       white-space: wrap;
 
       li {
@@ -67,6 +75,18 @@ nav {
             width: 2.5rem;
             height: 2.5rem;
           }
+        }
+      }
+
+      li:first-of-type {
+        position: absolute;
+        top: 0;
+      }
+
+      li.views {
+        display: none;
+        ul {
+          display: none;
         }
       }
     }
@@ -103,7 +123,7 @@ nav {
           padding-top: $spacing-8;
 
           select {
-            min-height: 2.5rem;
+            min-height: 3rem;
           }
         }
       }
