--- a/views/mgh.html
+++ b/views/mgh.html
@@ -5,6 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width,height=device-height,initial-scale=1,minimum-scale=1" />
   <title>Messenger Skunk Works | TigerConnect</title>
+  <base href="../">
   <!-- css -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css"
     integrity="sha512-NhSC1YmyruXifcj/KFRWoC561YpHpc5Jtzgvbuzx5VozKpWvQ+4nXhPdFgmx8xqexRcpAglTj9sIBWINXa8x5w=="
@@ -20,11 +21,11 @@
     <ul>
       <li>
         <fieldset>
-          <select id="location">
-            <option>Brigham and Women's Hospital</option>
-            <option>Massachusetts General Hospital</option>
-            <option>Beth Israel Deaconess Medical Center</option>
-            <option>UMass Memorial Medical Center</option>
+          <select id="location" onchange="window.open(this.value,'_self');">
+            <option value="views/bawh.html">Brigham and Women's Hospital</option>
+            <option value="#" selected>Massachusetts General Hospital</option>
+            <option value="views/bidmc.html">Beth Israel Deaconess Medical Center</option>
+            <option value="views/ummmc.html">UMass Memorial Medical Center</option>
           </select>
           <div class="select-icon" style="display: none;">
             <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-chevron-down" width="44"
@@ -104,7 +105,7 @@
     <section class="content">
       <h2 style="display: none;">Content</h2>
       <section class="content--list">
-        <h3>Brigham and Women's Hospital</h3>
+        <h3>Massachusetts General Hospital</h3>
         <form>
           <fieldset>
             <select>
@@ -158,7 +159,7 @@
           </fieldset>
         </form>
         <ul class="list">
-          <li class="content-sample direct">
+          <li class="content-sample">
             <div class="avatar"></div>
             <div class="details">
               <p>Firstname Lastname</p>
@@ -180,54 +181,10 @@
               </svg>
             </div>
           </li>
-          <li class="content-sample group">
+          <li>
             <div class="avatar"></div>
             <div class="details">
               <p>Group Name</p>
-              <p>Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-                consequat.</p>
-              <ul class="status">
-                <li class="status">8/10 Read</li>
-                <li class="time">11:48am</li>
-              </ul>
-            </div>
-            <div class="actions">
-              <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-dots-vertical" width="44"
-                height="44" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" fill="none"
-                stroke-linecap="round" stroke-linejoin="round">
-                <path stroke="none" d="M0 0h24v24H0z" fill="none" />
-                <path d="M12 12m-1 0a1 1 0 1 0 2 0a1 1 0 1 0 -2 0" />
-                <path d="M12 19m-1 0a1 1 0 1 0 2 0a1 1 0 1 0 -2 0" />
-                <path d="M12 5m-1 0a1 1 0 1 0 2 0a1 1 0 1 0 -2 0" />
-              </svg>
-            </div>
-          </li>
-          <li class="content-sample forum">
-            <div class="avatar"></div>
-            <div class="details">
-              <p>Forum Name</p>
-              <p>Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-                consequat.</p>
-              <ul class="status">
-                <li class="status">8/10 Read</li>
-                <li class="time">11:48am</li>
-              </ul>
-            </div>
-            <div class="actions">
-              <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-dots-vertical" width="44"
-                height="44" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" fill="none"
-                stroke-linecap="round" stroke-linejoin="round">
-                <path stroke="none" d="M0 0h24v24H0z" fill="none" />
-                <path d="M12 12m-1 0a1 1 0 1 0 2 0a1 1 0 1 0 -2 0" />
-                <path d="M12 19m-1 0a1 1 0 1 0 2 0a1 1 0 1 0 -2 0" />
-                <path d="M12 5m-1 0a1 1 0 1 0 2 0a1 1 0 1 0 -2 0" />
-              </svg>
-            </div>
-          </li>
-          <li class="content-sample broadcast">
-            <div class="avatar"></div>
-            <div class="details">
-              <p>Broadcast Name</p>
               <p>Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
                 consequat.</p>
               <ul class="status">
