--- a/views/locations/ummmc.html
+++ b/views/locations/ummmc.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width,height=device-height,initial-scale=1,minimum-scale=1" />
   <title>Messenger Skunk Works | TigerConnect</title>
-  <base href="../">
+  <base href="../../">
   <!-- css -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css"
     integrity="sha512-NhSC1YmyruXifcj/KFRWoC561YpHpc5Jtzgvbuzx5VozKpWvQ+4nXhPdFgmx8xqexRcpAglTj9sIBWINXa8x5w=="
@@ -22,10 +22,10 @@
       <li>
         <fieldset>
           <select id="location" onchange="window.open(this.value,'_self');">
-            <option value="views/bawh.html">Brigham and Women's Hospital</option>
-            <option value="#" selected>Massachusetts General Hospital</option>
-            <option value="views/bidmc.html">Beth Israel Deaconess Medical Center</option>
-            <option value="views/ummmc.html">UMass Memorial Medical Center</option>
+            <option value="views/locations/bawh.html">Brigham and Women's Hospital</option>
+            <option value="views/locations/mgh.html">Massachusetts General Hospital</option>
+            <option value="views/locations/bidmc.html">Beth Israel Deaconess Medical Center</option>
+            <option value="#" selected>UMass Memorial Medical Center</option>
           </select>
           <div class="select-icon" style="display: none;">
             <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-chevron-down" width="44"
@@ -105,7 +105,7 @@
     <section class="content">
       <h2 style="display: none;">Content</h2>
       <section class="content--list">
-        <h3>Massachusetts General Hospital</h3>
+        <h3>UMass Memorial Medical Center</h3>
         <form>
           <fieldset>
             <select>
