--- a/style/_scss/_content.scss
+++ b/style/_scss/_content.scss
@@ -3,7 +3,8 @@
   display: flex;
   flex-direction: row;
   position: relative;
-  overflow: hidden;
+  overflow-x: hidden;
+  overflow-y: scroll;
   width: 100%;
   max-width: 100%;
   min-width: 100%;
@@ -111,7 +112,7 @@
 
   .controls {
     display: grid;
-    position: absolute;
+    position: fixed;
     bottom: 1rem;
 
     span.fab {
