--- a/style/_scss/_inputs.scss
+++ b/style/_scss/_inputs.scss
@@ -50,6 +50,7 @@ select {
   padding: $spacing-8;
   border: 1px solid $color-input;
   border-radius: 0.25rem;
+  line-height: 1;
   text-overflow: ellipsis;
   white-space: nowrap;
   background-color: transparent;
