--- a/views/concepts/concept-d.html
+++ b/views/concepts/concept-d.html
@@ -25,12 +25,18 @@
       border-bottom: none;
     }
 
+    .content--list ul.list li.content-sample.group .avatar,
     .content--list ul.list li.content-sample.group .details p {
       display: none;
     }
 
     .content--list ul.list li.content-sample.group .details p:first-of-type {
       display: inherit;
+    }
+
+    .content--list ul.list li.content-sample.group .details {
+      width: 100%;
+      padding-left: 0;
     }
 
     ul.list+ul.list {
