--- a/style/_scss/_content.scss
+++ b/style/_scss/_content.scss
@@ -96,6 +96,7 @@
 
         svg {
           width: 100%;
+          max-width: 1.125rem;
           height: 100%;
           color: $color-nav;
           cursor: pointer;
