Added Messages to Tools nav drop-down

--- a/views/concepts/concept-b.html
+++ b/views/concepts/concept-b.html
@@ -122,6 +122,7 @@
       <li class="tools">
         <fieldset>
           <select id="tools">
+            <option>Messages</option>
             <option>Analytics</option>
             <option>Roles and Teams</option>
             <option>Analytics</option>
