--- a/views/concepts/concept-d.html
+++ b/views/concepts/concept-d.html
@@ -94,6 +94,7 @@
       <li>
         <fieldset>
           <select id="tools">
+            <option>Messages</option>
             <option>Analytics</option>
             <option>Roles and Teams</option>
             <option>Analytics</option>
