--- a/views/concepts/concept-a.html
+++ b/views/concepts/concept-a.html
@@ -74,6 +74,7 @@
       <li>
         <fieldset>
           <select id="tools">
+            <option>Messages</option>
             <option>Analytics</option>
             <option>Roles and Teams</option>
             <option>Analytics</option>
