--- a/views/concepts/concept-c.html
+++ b/views/concepts/concept-c.html
@@ -80,6 +80,7 @@
       <li>
         <fieldset>
           <select id="tools">
+            <option>Messages</option>
             <option>Analytics</option>
             <option>Roles and Teams</option>
             <option>Analytics</option>
